--- a/ZalandoShop/ZalandoShop/App.xaml
+++ b/ZalandoShop/ZalandoShop/App.xaml
@@ -4,5 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:ZalandoShop"
     RequestedTheme="Light">
-
+    <Application.Resources>
+        <local:ViewModelLocator x:Key="Locator"/>
+    </Application.Resources>
 </Application>
