--- a/ZalandoShop/ZalandoShop/Views/ZalandoSearchResultView.xaml
+++ b/ZalandoShop/ZalandoShop/Views/ZalandoSearchResultView.xaml
@@ -1,13 +1,15 @@
-﻿<Page
-    x:Class="ZalandoShop.MainPage"
+﻿<UserControl
+    x:Class="ZalandoShop.Views.ZalandoSearchResultView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:ZalandoShop"
+    xmlns:local="using:ZalandoShop.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    d:DesignHeight="300"
+    d:DesignWidth="400">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Grid>
 
     </Grid>
-</Page>
+</UserControl>
