--- a/ZalandoShop/ZalandoShop/Views/ZalandoSearchResultView.xaml
+++ b/ZalandoShop/ZalandoShop/Views/ZalandoSearchResultView.xaml
@@ -5,11 +5,64 @@
     xmlns:local="using:ZalandoShop.Views"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    DataContext="{Binding Source={StaticResource Locator}, Path=SearchResultsViewModel}"
+    xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
+    <UserControl.Resources>
+    <ResourceDictionary>
+        <DataTemplate x:Key="WaitListTemplate">
+
+            <StackPanel Orientation="Horizontal" Padding="12">
+
+                <ProgressRing IsActive="True" Margin="0,0,12,0" Foreground="Blue" />
+
+                <TextBlock Text="Loading" VerticalAlignment="Center" Foreground="White"/>
+
+            </StackPanel>
+
+        </DataTemplate>
+
+        <DataTemplate x:Key="ZalandoPhotosTemplate">
+            <Grid HorizontalAlignment="Left" Width="250" Height="250">
+                <Border Background="Blue">
+                    <Image Source="{Binding ImageUrl}" Stretch="UniformToFill"/>
+                </Border>
+                <StackPanel VerticalAlignment="Bottom">
+                    <TextBlock Text="{Binding ProductName}" Foreground="Red" Height="60" Margin="15,0,15,0"/>
+                </StackPanel>
+            </Grid>
+        </DataTemplate>
+    </ResourceDictionary>
+    </UserControl.Resources>
 
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition></RowDefinition>
+        </Grid.RowDefinitions>
 
+        <controls:AdaptiveGridView Name="itemGridView" 
+                                   ScrollViewer.IsHorizontalRailEnabled="True" 
+                                   ScrollViewer.HorizontalScrollMode="Auto" 
+                                   ScrollViewer.HorizontalScrollBarVisibility="Auto"
+                                   Grid.Row="1"
+                                   OneRowModeEnabled="False"
+                                   ItemHeight="200"
+                                   DesiredWidth="300"
+                                   SelectionMode="Single"
+                                   IsItemClickEnabled="False"
+                                   ItemTemplate="{StaticResource ZalandoPhotosTemplate}">
+        </controls:AdaptiveGridView>
+
+        <controls:Loading x:Name="LoadingControl" HorizontalContentAlignment="Center" IsLoading="{Binding IsLoading}"
+
+                          VerticalContentAlignment="Center"
+
+                          Background="Black" Opacity="0.7">
+
+            <ContentControl x:Name="LoadingContentControl" ContentTemplate="{Binding Source={StaticResource WaitListTemplate}}"/>
+
+        </controls:Loading>
     </Grid>
 </UserControl>
