UI enhancements of search page

--- a/ZalandoShop/ZalandoShop/Views/MainPage.xaml
+++ b/ZalandoShop/ZalandoShop/Views/MainPage.xaml
@@ -14,7 +14,7 @@
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="250"></RowDefinition>
+            <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
         <Views:ZalandoSearchView Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2"></Views:ZalandoSearchView>
