--- a/ZalandoShop/ZalandoShop/Views/ZalandoSearchView.xaml
+++ b/ZalandoShop/ZalandoShop/Views/ZalandoSearchView.xaml
@@ -10,42 +10,30 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
 
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="80"></RowDefinition>
-            <RowDefinition Height="80"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-        </Grid.ColumnDefinitions>
-        <TextBlock Text="Search Zalando products by keyword" Grid.Column="0" Grid.ColumnSpan="2" FontSize="15" Margin="0 10 0 0" HorizontalAlignment="Left"></TextBlock>
-        <!--<TextBox Name="SearchTextBox" 
-                 Text="{Binding SearchText, Mode=TwoWay}" Grid.Row="0" Grid.Column="1" Width="200" Height="50" HorizontalAlignment="Left"></TextBox>-->
-        <AutoSuggestBox Header="Filter Articles" Grid.Row="0" Grid.Column="2"
+    <StackPanel>
+        <StackPanel Orientation="Vertical">
+            <TextBlock Text="Search Zalando products by keyword" x:Name="txtSearchByKeyWord" FontSize="15" Margin="0 10 0 0" HorizontalAlignment="Left"></TextBlock>
+            <AutoSuggestBox Header="Filter Articles" RelativePanel.RightOf="txtSearchByKeyWord" x:Name="txtAutoSuggest"
                 TextChanged="{x:Bind Vm.FilterArticles}"
                 QuerySubmitted="{x:Bind Vm.ProcessQuery}"
                 ItemsSource="{x:Bind Vm.Articles, Mode=OneWay}"
                 Text="{x:Bind Vm.SearchText, Mode=TwoWay}"
                 QueryIcon="Find" />
-        <Button Content="Search" FontSize="20" 
-                Grid.Column="0" 
-                Grid.Row="2" VerticalAlignment="Top" Grid.ColumnSpan="2" HorizontalAlignment="Right" Margin="20" Command="{Binding SearchZalandoCommand}"
+        </StackPanel>
+        <StackPanel Orientation="Horizontal">
+        <Button Content="Search" FontSize="20" x:Name="btnSearch"
+                RelativePanel.Below="txtAutoSuggest"
+                Command="{Binding SearchZalandoCommand}"
                 >
 
         </Button>
-        <Button Content="Men" FontSize="{Binding MenFontSize,Mode=TwoWay}"  Background="{Binding MaleForeGroundColor,Mode=TwoWay}"
-                Grid.Column="0" 
-                Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20" Command="{Binding MenFilterCommand}"
-                >
+        <Button x:Name="btnMaleFilter" Content="Men" RelativePanel.LeftOf="btnSearch" FontSize="{Binding MenFontSize,Mode=TwoWay}"  Background="{Binding MaleForeGroundColor,Mode=TwoWay}"
+                Command="{Binding MenFilterCommand}">
         </Button>
         <Button Content="Women" FontSize="{Binding WomenFontSize,Mode=TwoWay}" Background="{Binding FemaleForeGroundColor}" 
-                Grid.Column="1" 
-                Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="20" Command="{Binding WomenFilterCommand}"
-                >
+                RelativePanel.RightOf="btnMaleFilter" Command="{Binding WomenFilterCommand}">
         </Button>
+        </StackPanel>
 
-    </Grid>
+    </StackPanel>
 </UserControl>
