-Added CustomStyles -Bug fixing in filtering (men and women) -Add capability of remove filter -Using adaptive triggers to switch between Gridview templates

--- a/ZalandoShop/ZalandoShop/App.xaml
+++ b/ZalandoShop/ZalandoShop/App.xaml
@@ -5,6 +5,11 @@
     xmlns:local="using:ZalandoShop"
     RequestedTheme="Light">
     <Application.Resources>
-        <local:ViewModelLocator x:Key="Locator"/>
+        <ResourceDictionary>
+            <local:ViewModelLocator x:Key="Locator"/>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Styles/CustomStyles"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
